Fix header on mobile

--- a/src/app/top-header/top-header.component.scss
+++ b/src/app/top-header/top-header.component.scss
@@ -1,8 +1,3 @@
-.nav-list {
-  display: flex;
-  padding-inline-start: 0px;
-}
-
 .nav-list li {
   display: unset;
 }
