--- a/src/styles.scss
+++ b/src/styles.scss
@@ -90,8 +90,6 @@ label {
   cursor: auto;
 }
 
-/* Fancy Button */
-
 .fancy-button {
   background-color: white;
   color: #1976d2;
@@ -103,15 +101,11 @@ label {
 }
 
 /* Top Bar */
-
-app-top-header {
-  width: 100%;
-  height: 68px;
+app-top-header ul {
   background-color: #1976d2;
-  padding: 16px;
+  padding: 12px 16px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
 }
 
@@ -120,14 +114,6 @@ app-top-header h1 {
   margin-bottom: 0;
 }
 
-app-top-header a{
+app-top-header a {
   text-decoration: none !important;
-}
-
-.nav-list {
-  margin-top: 16px;
-}
-
-li {
-  margin-bottom: 2px;
 }
